--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,14 +6,13 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/medialog.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/static/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/static/css/medialog.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
-    <!--<script src="{{ "/js/jquery.fastLiveFilter.js" | prepend: site.baseurl }}" ></script>-->
-    <script src="{{ "/js/lists.js" | prepend: site.baseurl }}" ></script>
-    <script src="{{ "/js/medialog.js" | prepend: site.baseurl }}" ></script>
-    <script src="{{ "/js/jquery.shorten.js" | prepend: site.baseurl }}" ></script>
+    <script src="{{ "/static/js/lists.js" | prepend: site.baseurl }}" ></script>
+    <script src="{{ "/static/js/medialog.js" | prepend: site.baseurl }}" ></script>
+    <script src="{{ "/static/js/jquery.shorten.js" | prepend: site.baseurl }}" ></script>
 
 </head>
